# numbers

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
.github/workflows/: cmake.yml  release.yml
build_support/: run_clang_format.py
examples/: CMakeLists.txt  arithmetic.cc  checked_sub.cc  conversion.cc  for-error.cc  hash.cc  i128.cc  main.cc  overflowing-sub.cc  overflowing_div.cc  overflowing_sub.cc  saturating_mul.cc  size.cc  u128.cc
src/: CMakeLists.txt
src/include/: bits.hh  i128.hh  int128.hh  int128_have_intrinstic.inc  int128_no_intrinstic.inc  integer.hh  numbers.h  uinteger.hh
src/include/internal/: bits.hh  config.h
src/numbers/: CMakeLists.txt  int128.cc  integer.cc  uinteger.cc
test/: CMakeLists.txt
test/integer/: CMakeLists.txt  i128_overflow_test.cc  i128_test.cc  int128_test.cc  integer_test.cc
test/uinteger/: CMakeLists.txt  u128_overflow_test.cc  uint128_test.cc  uinteger_test.cc
test/utils/: utils.cc
tests/: CMakeLists.txt
tests/include/test/: utils.hh
tests/integer/: CMakeLists.txt  int128.test.cc  integer.test.cc
tests/uinteger/: CMakeLists.txt  u128_overflow.test.cc  uint128.test.cc  uinteger.test.cc  uinteger_test.cc
tests/utils/: CMakeLists.txt
